--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ lab01/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFil
 lab01/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
 lab01/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 lab01/target/lab01-0.0.1-SNAPSHOT.jar
+lab01/target/classes/edu/zut/spring/service/AbstractLogic.class
+lab01/target/classes/edu/zut/spring/service/AndLogicImpl.class
+lab01/target/classes/edu/zut/spring/service/IBaseLogic.class
+lab01/target/classes/edu/zut/spring/service/MsgService.class
+lab01/target/classes/edu/zut/spring/service/MsgServiceImpl.class
+lab01/target/classes/edu/zut/spring/service/OrLogicImpl.class
