updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ lab01/target/classes/edu/zut/spring/service/IBaseLogic.class
 lab01/target/classes/edu/zut/spring/service/MsgService.class
 lab01/target/classes/edu/zut/spring/service/MsgServiceImpl.class
 lab01/target/classes/edu/zut/spring/service/OrLogicImpl.class
+lab01/target/classes/jg/zut/spring/service/AbstractLogic.class
+lab01/target/classes/jg/zut/spring/service/AndLogicImpl.class
+lab01/target/classes/jg/zut/spring/service/IBaseLogic.class
+lab01/target/classes/jg/zut/spring/service/OrLogicImpl.class
