--- a/lab04/contacts1/pom.xml
+++ b/lab04/contacts1/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.zut.spring</groupId>
   <artifactId>contacts1</artifactId>
+  <packaging>war</packaging>
   <version>1.0.0.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
@@ -65,11 +66,11 @@
       <version>3.1.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.2.4</version>
-    </dependency>
+	<dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>javax.servlet.jsp-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
 
     <dependency>
       <groupId>javax.el</groupId>
@@ -99,4 +100,20 @@
     </dependency>
 
   </dependencies>
+  
+  <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
