--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,46 @@ lab02/stereo1/target/classes/soundsystem/CompactDisc.class
 lab02/stereo1/target/classes/soundsystem/CDPlayerMain.class
 lab02/stereo1/target/classes/soundsystem/CDPlayerConfig.class
 lab02/stereo1/target/test-classes/soundsystem/CDPlayerTest.class
+lab02/stereo1/target/classes/soundsystem/CDPlayer.class
+lab02/stereo1/target/classes/soundsystem/CDPlayerConfig.class
+lab02/stereo1/target/classes/soundsystem/CDPlayerMain.class
+lab02/stereo1/target/classes/soundsystem/MediaPlayer.class
+lab02/stereo1/target/classes/soundsystem/CompactDisc.class
+lab02/stereo1/target/classes/soundsystem/SgtPeppers.class
+lab02/stereo1/target/test-classes/soundsystem/CDPlayerTest.class
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT.war
+lab04/contacts1/target/classes/META-INF/MANIFEST.MF
+lab04/contacts1/target/classes/META-INF/maven/edu.zut.spring/contacts1/pom.properties
+lab04/contacts1/target/classes/META-INF/maven/edu.zut.spring/contacts1/pom.xml
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/messages.properties
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/classes/log4j.xml
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/aopalliance-1.0.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/classmate-0.8.0.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/commons-lang3-3.1.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/commons-logging-1.1.3.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/h2-1.4.182.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/hibernate-validator-5.0.1.Final.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/javax.el-api-2.2.4.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/javax.servlet-api-3.1.0.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/javax.servlet.jsp-api-2.3.1.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/jboss-logging-3.1.1.GA.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/jstl-1.2.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-aop-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-beans-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-context-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-core-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-expression-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-jdbc-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-tx-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-web-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/spring-webmvc-4.0.7.RELEASE.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/lib/validation-api-1.1.0.Final.jar
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/WEB-INF/views/home.jsp
+lab04/contacts1/target/contacts1-1.0.0.0-SNAPSHOT/resources/style.css
+lab04/contacts1/target/maven-archiver/pom.properties
+lab04/contacts1/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+lab04/contacts1/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+lab04/contacts1/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+lab04/contacts1/target/classes/META-INF/MANIFEST.MF
+lab04/contacts1/target/classes/META-INF/maven/edu.zut.spring/contacts1/pom.properties
+lab04/contacts1/target/classes/META-INF/maven/edu.zut.spring/contacts1/pom.xml
