--- a/lab04/contacts3/pom.xml
+++ b/lab04/contacts3/pom.xml
@@ -4,8 +4,24 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.zut.spring</groupId>
   <artifactId>contacts3</artifactId>
+  <packaging>war</packaging>
   <version>1.0.0.0-SNAPSHOT</version>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
+	<dependency>
+	    <groupId>org.thymeleaf</groupId>
+	    <artifactId>thymeleaf-spring4</artifactId>
+	    <version>2.1.4.RELEASE</version>
+	</dependency>
+  
+	<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity3 -->
+	<dependency>
+	    <groupId>org.thymeleaf.extras</groupId>
+	    <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+	    <version>3.0.0.RELEASE</version>
+	</dependency>
+
+  
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -65,11 +81,11 @@
       <version>3.1.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.2.4</version>
-    </dependency>
+	<dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>javax.servlet.jsp-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
 
     <dependency>
       <groupId>javax.el</groupId>
@@ -99,4 +115,20 @@
     </dependency>
 
   </dependencies>
+  
+  <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 </project>
