--- a/lab05/contacts4/pom.xml
+++ b/lab05/contacts4/pom.xml
@@ -3,6 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.zut.spring</groupId>
+  <packaging>war</packaging>
   <artifactId>contacts4</artifactId>
   <version>1.0.0.0-SNAPSHOT</version>
   <dependencies>
@@ -73,11 +74,12 @@
       <version>3.1.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.2.4</version>
-    </dependency>
+	<dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>javax.servlet.jsp-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
+
 
     <dependency>
       <groupId>javax.el</groupId>
@@ -113,4 +115,21 @@
       </dependency>
 
   </dependencies>
+  
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    
+    <properties>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+  
 </project>
