--- a/lab06/contacts8/pom.xml
+++ b/lab06/contacts8/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.zut.spring</groupId>
   <artifactId>contacts8</artifactId>
+  <packaging>war</packaging>
   <version>1.0.0.0-SNAPSHOT</version>
   <dependencies>
     <dependency>
@@ -93,11 +94,11 @@
       <version>3.1.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.2.4</version>
-    </dependency>
+	<dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>javax.servlet.jsp-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
 
     <dependency>
       <groupId>javax.el</groupId>
@@ -133,4 +134,21 @@
       </dependency>
 
   </dependencies>
+  
+      <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    
+    <properties>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+  
 </project>
