--- a/lab06/contacts8/pom.xml
+++ b/lab06/contacts8/pom.xml
@@ -133,6 +133,12 @@
       <version>2.1.3.RELEASE</version>
       </dependency>
 
+	<dependency>
+	    <groupId>javax.inject</groupId>
+	    <artifactId>javax.inject</artifactId>
+	    <version>1</version>
+	</dependency>
+
   </dependencies>
   
       <build>
