--- a/lab06/contacts10/pom.xml
+++ b/lab06/contacts10/pom.xml
@@ -46,13 +46,6 @@
       <scope>test</scope>
     </dependency>
 
-   <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.182</version>
-      <scope>compile</scope>
-    </dependency>
-
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
       <artifactId>system-rules</artifactId>
@@ -75,6 +68,21 @@
       <version>4.0.1.Final</version>
     </dependency>
 
+	<dependency>
+		<groupId>org.hibernate.javax.persistence</groupId>
+		<artifactId>hibernate-jpa-2.1-api</artifactId>
+		<version>1.0.0.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-core</artifactId>
+		<version>5.2.3.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>5.2.3.Final</version>
+	</dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -138,6 +146,14 @@
 	    <artifactId>javax.inject</artifactId>
 	    <version>1</version>
 	</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
+<dependency>
+    <groupId>javax.persistence</groupId>
+    <artifactId>javax.persistence-api</artifactId>
+    <version>2.2</version>
+</dependency>
+
 
   </dependencies>
   
