--- a/lab03/knight4/pom.xml
+++ b/lab03/knight4/pom.xml
@@ -39,5 +39,13 @@
 		<artifactId>aspectjweaver</artifactId>
 		<version>1.7.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>2.10.0</version>
+	    <scope>test</scope>
+	</dependency>
+	
   </dependencies>
 </project>
